fix bug for icon animation when collapsed

--- a/mfe-shell-angular/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/mfe-shell-angular/src/app/shared/components/sidebar/sidebar.component.scss
@@ -64,7 +64,7 @@ $purple-bland-8: rgba($color-active, 0.08);
         width: 100%;
         transition: color 0.3s ease;
 
-        label{
+        label {
           cursor: pointer;
         }
 
@@ -196,19 +196,50 @@ $purple-bland-8: rgba($color-active, 0.08);
   animation: raceMove 0.6s ease-in-out;
 }
 
+.collapsed:hover .collapse-icon {
+  animation: raceBack 0.6s ease-in-out;
+}
+
+
+
 @keyframes raceMove {
   0% {
     transform: translateX(0);
     opacity: 1;
   }
+
   40% {
     transform: translateX(-50px);
     opacity: 0;
   }
+
   60% {
     transform: translateX(50px);
     opacity: 0;
   }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes raceBack {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  40% {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+
+  60% {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+
   100% {
     transform: translateX(0);
     opacity: 1;
